name:           epic-hs
version:        0.1.0.0
description:    Simple haskell refactoring utilities
homepage:       https://github.com/jcpetruzza/epic#readme
bug-reports:    https://github.com/jcpetruzza/epic/issues
author:         Daniel Gorin
maintainer:     jcpetruzza@gmail.com
copyright:      2018 Daniel Gorin
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/jcpetruzza/epic

library
  exposed-modules:
      Envelope
      SrcLoc
  hs-source-dirs:
      lib
  build-depends:
      base
    , aeson

  default-language: Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DeriveFunctor
    DeriveTraversable
    LambdaCase

executable list-hse
  main-is: list-hse.hs
  hs-source-dirs:
      bin
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , aeson
    , bytestring
    , epic-hs
    , haskell-src-exts
    , text

  default-language: Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DeriveFunctor
    DeriveTraversable
    LambdaCase

test-suite epic-hs-test-lib
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test/lib
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , epic-hs
  default-language: Haskell2010
