name:           epic-core
version:        0.1.0.0
description:    Script your epic refactorings
homepage:       https://github.com/jcpetruzza/epic#readme
bug-reports:    https://github.com/jcpetruzza/epic/issues
author:         Daniel Gorin
maintainer:     jcpetruzza@gmail.com
copyright:      2018 Daniel Gorin
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/jcpetruzza/epic

library
  exposed-modules:
      Assignments
      Hunk
      LinesOfText
      Match
      Patch
      SrcLoc
      Surface
      Streaming
  hs-source-dirs:
      lib
  build-depends:
      base
    , aeson
    , attoparsec
    , directory
    , exceptions
    , filepath
    , hashable
    , lattices
    , mtl
    , pipes
    , pipes-attoparsec
    , pipes-text
    , text
    , temporary
    , unordered-containers
    , vector

  default-language: Haskell2010
  default-extensions:
    BangPatterns
    DeriveAnyClass
    DeriveGeneric
    DeriveFunctor
    DeriveTraversable
    LambdaCase
    OverloadedStrings

test-suite epic-core-test-lib
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Arbitrary
      Spec.LinesOfText
      Spec.Match
      Spec.Patch
      Spec.Streaming
      Spec.Surface
  hs-source-dirs:
      test/lib
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , attoparsec
    , directory
    , epic-core
    , filepath
    , mtl
    , pipes
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , temporary
    , text
    , unordered-containers
    , vector
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    LambdaCase
    ExplicitForAll
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications


executable epic-cat
  main-is: epic-cat.hs

  hs-source-dirs:
      epic-cat

  ghc-options: -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      base
    , epic-core
    , pipes

  default-language: Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DeriveFunctor
    DeriveTraversable
    LambdaCase
    OverloadedStrings
