name:           epic-hs
version:        0.1.0.0
description:    Haskell support for epic refactorings
homepage:       https://github.com/jcpetruzza/epic#readme
bug-reports:    https://github.com/jcpetruzza/epic/issues
author:         Daniel Gorin
maintainer:     jcpetruzza@gmail.com
copyright:      2018 Daniel Gorin
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/jcpetruzza/epic

executable list-hse
  main-is: list-hse.hs

  other-modules:
    Envelope

  hs-source-dirs:
      src

  ghc-options: -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      base
    , aeson
    , bytestring
    , epic-core
    , haskell-src-exts
    , text

  default-language: Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DeriveFunctor
    DeriveTraversable
    LambdaCase
